contrib/deploy/ocp/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pe-forekat-admin-prod
  labels:
    app.kubernetes.io/name: pe-forekat-admin
    app.kubernetes.io/part-of: pe-forekat-admin
