contrib/deploy/ocp/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pe-forekat-admin
  namespace: pe-forekat-admin-prod
  labels:
    app.kubernetes.io/name: pe-forekat-admin
    app.kubernetes.io/part-of: pe-forekat-admin
spec:
  selector:
    app: pe-forekat-admin
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
